@@ -3,6 +3,11 @@ Version 2.38
  [Francisco Javier]
  * virtnbdbackup: reuse existing sftp connections during backup. (#283)
 
+ [Michael Ablassmeier]
+ * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
+ the NBD device sometimes needs some time to settle, wait until it is seekable
+ to the end of the block list instead of failing.
+
 Version 2.37
 ---------
  * Add missing nbdkit and python plugin to docker container image. (#282)
